add_executable(helloworld helloworld.cpp)
#target_link_libraries(helloworld my_own_library)

add_executable(tests tests.cpp)

# Kommentieren Sie die folgenden Zeilen fuer die Aufgabe `mile_to_kilometer` aus
#add_executable(mile_to_kilometer mile_to_kilometer.cpp)

add_executable(1_3 1_3.cpp)

add_executable(1_15 1_15.cpp)

add_executable(1_9 1:9.cpp)

add_executable(1_10 1_10.cpp)

add_executable(1_12 1_12.cpp)

add_executable(1_13 1_13.cpp)

add_executable(1_14 1_14.cpp)

add_executable(1_15 1_15.cpp)

add_executable(1_11 1_11.cpp)










